--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
@@ -19,8 +19,10 @@
     "ci": "npm run typecheck && npm run lint && npm run format:check && npm run build && npm run test"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@hookform/resolvers": "^3.9.1",
-    "@next/mdx": "^14.2.16",
+    "@next/eslint-plugin-next": "^16.1.5",
+    "@next/mdx": "^16.1.5",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -28,17 +30,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@react-three/drei": "^9.88.17",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@sentry/nextjs": "^8.39.0",
     "@supabase/supabase-js": "^2.46.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/dom": "^10.4.1",
     "@types/mdx": "^2.0.13",
-    "@types/three": "^0.160.0",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/og": "^0.6.3",
-    "@vercel/speed-insights": "^1.0.12",
+    "@types/three": "^0.182.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/og": "^0.8.6",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.3",
@@ -48,37 +51,37 @@
     "ioredis": "^5.7.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
-    "next": "^15.5.3",
+    "next": "^16.1.5",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
     "plausible-tracker": "^0.3.9",
     "puppeteer": "^23.8.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
     "reading-time": "^1.5.0",
     "resend": "^4.0.0",
     "tailwind-merge": "^2.5.4",
-    "three": "^0.160.0",
+    "three": "^0.182.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
     "@playwright/test": "^1.48.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.7",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.16",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
